2007-11-06  Andreia Gaita <avidigal@novell.com>

	* windows.mak: windows makefile for command line building with nmake
	* gluezilla2k5.vcproj: add release configuration, finetune settings

2007-11-06  Andreia Gaita <avidigal@novell.com>

	* Disable debug messages when enable-optimize=yes (non-debug build)
	* gluezilla.*: add access to the WebNavigation object, for future 
			direct interface access

2007-11-05  Andreia Gaita <avidigal@novell.com>

	* LocationProvider.*, Widget.cpp: GRE_GetXPComPath() searches for a 
	runtime with a fixed version equal to the one it was built against,
	so only use it to search for a local runtime, and if it fails, use
	GRE_GetPathWithProperties() to get a runtime with a version >= 1.8,
	independently of whatever version it was initially built with.

2007-10-31  Andreia Gaita  <avidigal@novell.com>

	* gluezilla.*,Widget.h: Receive user data dir to store local data.
	* LocationProvider.cpp: Use the user data dir for component and xpti
	registry. Use the mozilla directories to load plugins and other shared
	mozilla things. No need to use local directories anymore.

2007-10-30  Andreia Gaita  <avidigal@novell.com>

	* gluezilla.*, Widget.*: add blur entry point to catch
	when the webbrowser control loses focus

2007-10-18  Wade Berrier  <wberrier@novell.com>

	* Makefile.am: Add missing headers to EXTRA_DIST

2007-10-18  Andreia Gaita  <avidigal@novell.com>

	* Widget.cpp: fix pointer cast for 64-bit arch, fix asynch 
	return value

2007-10-07  Andreia Gaita  <avidigal@novell.com>

	* Implement helper methods for the nsString class, to 
	initialize/destroy nsString instances and get/set the actual
	chars.
	All dom interface methods that have string parameters
	take a nsString class, which comes from these helper
	methods.
	Change the exit to really quit the gtk thread.
	Add dom interface support.

2007-09-23  Andreia Gaita  <avidigal@novell.com>

	* Implement dialog popups through the custom 